# chat-your-data

./: app.py  cli_app.py  pyproject.toml  query_data.py  state_of_the_union.txt  vectorstore.pkl
